--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,32 +9,26 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # 1) Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v4                   # GitHub’s checkout action :contentReference[oaicite:3]{index=3}
+      - uses: actions/checkout@v4                                       :contentReference[oaicite:7]{index=7}
 
-      - name: Install PNPM
-        uses: pnpm/action-setup@v4                                          :contentReference[oaicite:1]{index=1}
-        with:
-          # Optional: pin to specific major version; 
-          # omit version to use `packageManager` from package.json
-          version: 10   
-          
-      # 2) Setup Node.js and pnpm
+      - name: Enable Corepack
+        run: |
+          npm install --global corepack@latest
+          corepack enable                                             :contentReference[oaicite:8]{index=8}
+
       - name: Setup Node.js
-        uses: actions/setup-node@v4                  # Official Node.js setup :contentReference[oaicite:4]{index=4}
+        uses: actions/setup-node@v4                                     :contentReference[oaicite:9]{index=9}
         with:
           node-version: 20
-          cache: "pnpm"                              # Enables pnpm caching :contentReference[oaicite:5]{index=5}
+          cache: "pnpm"
 
-      # 3) Install dependencies & build
       - name: Install dependencies
-        run: pnpm install                           # Installs per pnpm-lock.yaml :contentReference[oaicite:6]{index=6}
+        run: pnpm install --frozen-lockfile                            :contentReference[oaicite:10]{index=10}
 
-      - name: Build project
-        run: pnpm build                             # Runs your build script :contentReference[oaicite:7]{index=7}
+      - name: Build
+        run: pnpm build    
+
 
       # 4) Deploy via Netlify CLI
       - name: Deploy to Netlify
