--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,38 @@
-name: Build & Deploy to Netlify
+name: Build & Deploy
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4                                       :contentReference[oaicite:7]{index=7}
+      - name: Checkout repository
+        uses: actions/checkout@v4                             # v4 is valid :contentReference[oaicite:0]{index=0}
+        with:
+          fetch-depth: 0
 
-      - name: Enable Corepack
-        run: |
-          npm install --global corepack@latest
-          corepack enable                                             :contentReference[oaicite:8]{index=8}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4                                     :contentReference[oaicite:9]{index=9}
+      - name: Setup Node.js and pnpm
+        uses: actions/setup-node@v4                            # Official setup-node:contentReference[oaicite:1]{index=1}
         with:
           node-version: 20
           cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile                            :contentReference[oaicite:10]{index=10}
+        run: pnpm install --frozen-lockfile
 
-      - name: Build
-        run: pnpm build    
+      - name: Build project
+        run: pnpm build
 
-
-      # 4) Deploy via Netlify CLI
       - name: Deploy to Netlify
         run: |
-          npm install --global netlify-cli         # Install Netlify CLI
-          netlify deploy --prod                    \
-            --site=$NETLIFY_PROJECT_ID                \
-            --auth=$NETLIFY_ACCESS_TOKEN             \
-            --dir=./dist                           # Replace with your build output folder :contentReference[oaicite:8]{index=8}
+          npm install -g netlify-cli
+          netlify deploy --prod \
+            --site="$NETLIFY_SITE_ID" \
+            --auth="$NETLIFY_AUTH_TOKEN" \
+            --dir=./dist
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_ACCESS_TOKEN }}
-          NETLIFY_SITE_ID:   ${{ secrets.NETLIFY_PROJECT_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID:   ${{ secrets.NETLIFY_SITE_ID }}
