update workflow trigger

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ukrainian-names-declension-ui",
+  "name": "declensions",
   "private": true,
   "type": "module",
   "version": "0.0.0",
