--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
-    "@mdi/font": "7.4.47",
     "shevchenko": "^3.1.4",
     "shevchenko-ext-military": "0.0.0-beta.2",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^5.2.3",
     "eslint": "^9.23.0",
     "eslint-config-vuetify": "^3.0.3",
