--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "shevchenko": "^3.1.4",
     "shevchenko-ext-military": "0.0.0-beta.2",
     "vue": "^3.5.13",
+    "vue-gtag": "^3.5.0",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
